# minimal-android-vr

./: .gitignore  .gitmodules  AndroidManifest.xml  CMakeLists.txt  README.md  Tupfile  add_apk.cmake  main.c  tup.config
org/lovr/mini/: LoadLibraries.java
